--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,3 +5,9 @@ h1 {
     color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#map {
+    position: relative;
+    height: 300px;
+    width: 100%;
+}
