bar graph added

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                 <div class="col-3 col-md-12">
                     <!-- insert cost plotly here  -->
                     <!-- rename files to match -->
-                    <div id="plot"></div>
+                    <div id="bar"></div>
                     <script src="static/js/plots.js"></script>
                 </div>
             </div>
@@ -61,6 +61,7 @@
     <script type="text/javascript" src="static/js/config.js"></script>
 
     <!-- Our Project 2 Javascript -->
+    <script src="static/js/app.js"></script>
     <script src="static/js/logic.js"></script>
 
 </body>
