--- a/templates/index.html
+++ b/templates/index.html
@@ -21,28 +21,34 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <h1>Cost of Higher Education</h1>
-
+    <div class="container"></div>
+            <h1>COST OF HIGHER EDUCATION IN ILLINOIS</h1>
+            <h2>Click on a marker to see more the number of students enrolled, financial aid v tuition prices, & demographics of each school!</h2>
+            <h3>Northwestern Data Science Bootcamp Project 2 by Anne Good, Matt Godfrey, Mariano Rivera, & Grace Zafar</h3>
+            <p><a class="btn btn-primary btn-lg btn-block" href="/" role="button">Reset Map</a></p>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
                 <!-- insert leaflet map here -->
                 <div id="map"></div>
             </div>
-            <div class="row">
-                <div class="col-3 col-md-12">
-                    <!-- insert demographic info chart.js here  -->
+            <div class="col-md-4">
+                <div class="row">
+                    <div class="col-3 col-md-12">
+                        <!-- insert demographic info pie chart.js here  -->
+                        <div id="pie"></div>
+                    </div>
                 </div>
-                <div class="col-3 col-md-12">
-                    <!-- insert cost plotly here  -->
-                    <!-- rename files to match -->
-                    <div id="bar"></div>
-                    <script src="static/js/plots.js"></script>
+                <div class="row">
+                    <div class="col-3 col-md-12">
+                        <!-- insert cost plotly here  -->
+                        <!-- rename files to match -->
+                        <div id="bar"></div>
+                        <script src="static/js/plots.js"></script>
+                    </div>
                 </div>
             </div>
         </div>
