Added background and styling to charts, altered map zoom, edited comments.

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,22 +35,24 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8">
-                <!-- insert leaflet map here -->
+                <!-- Leaflet map -->
                 <div id="map"></div>
             </div>
             <div class="col-md-4">
                 <div class="row">
                     <div class="col-3 col-md-12">
-                        <!-- insert demographic info pie chart.js here  -->
+                        <!-- Pie chart -->
+                        <h2><b>Gender Ratio<b></h2>
                         <div>
                             <canvas id="pie">
                             </canvas>
                         </div>
+                        <h6>(only two genders were represented in the data)</h6>
                     </div>
                     <div class="row">
                         <div class="col-3 col-md-12">
-                            <!-- insert cost plotly here  -->
-                            <!-- rename files to match -->
+                            <!-- Bar chart  -->
+                            <h2><b>Tuition Price and Average Financial Aid Awards<b></h2>
                             <div id="bar"></div>
                         </div>
                     </div>
