--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -24,6 +24,12 @@ h3 {
     font-family: Arial, Helvetica, sans-serif
 }
 
+h6 {
+    text-align: right;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif
+}
+
 .btn-primary {
     font-size: 20px;
     text-align: center;
@@ -42,12 +48,13 @@ h3 {
 
 #map {
     position: right;
-    height: 800px;
+    height: 1040px;
     width: 100%;
 }
 
 #pie {
     position: center;
+    background-color: white;
     height: 400px;
     width: 100%;
 }
