--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="container"></div>
     <h1>COST OF HIGHER EDUCATION IN ILLINOIS</h1>
-    <h2>Click on a marker to see more the number of students enrolled, financial aid v tuition prices, & demographics of
+    <h2>Click on a marker to see the number of students enrolled, financial aid v tuition prices, & demographics of
         each school!</h2>
     <h3>Northwestern Data Science Bootcamp Project 2 by Anne Good, Matt Godfrey, Mariano Rivera, & Grace Zafar</h3>
     <p><a class="btn btn-primary btn-lg btn-block" href="/" role="button">Reset Map</a></p>
